--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -7,6 +7,13 @@
 
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+  <link rel="stylesheet" type="text/css" href="{% static 'st/semantic.min.css' %}">
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
+  <script src="{% static 'st/semantic.min.js' %}"></script>
 </head>
 
 <body>
