--- a/source/server/annotation/templates/projects.html
+++ b/source/server/annotation/templates/projects.html
@@ -1,7 +1,59 @@
 {% extends "base.html" %}
 
+{% block sidebar %}
+
+<div class="ui large top fixed hidden act menu">
+      <div class="ui container">
+        <a href="/" class="item">Home</a> 
+        <a href="/projects" class="active item">Projects</a>
+      </div>
+    </div>
+<div class="ui vertical inverted sidebar act menu">
+      <a href="/" class="item">Home</a> 
+      <a href="/projects" class="active item">Projects</a>
+</div>	
+
+{% endblock %}
+
 {% block content %}
 
-<h1>Projects</h1>
+<div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment">
+        <div class="ui container">
+            <div class="ui large secondary inverted pointing act menu">
+               <a class="toc item"><i class="sidebar icon"></i></a>
+               <a href="/" class="item">Home</a>
+               <a href="/projects" class="active item">Projects</a>
+            </div>
+        </div>
+    </div>
+    <div class="ui vertical stripe segment">
+    	<div class="ui middle aligned stackable grid container">
+    	    <div class="ui relaxed divided list">
+                <div class="item">
+                     <i class="large chevron circle right middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header">project1</a>
+                        <div class="description">Lorem ipsum dolor sit amet.</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="large chevron circle right middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header">project2</a>
+                        <div class="description">Lorem ipsum dolor sit amet.</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="large chevron circle right middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header">project3</a>
+                        <div class="description">Lorem ipsum dolor sit amet.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
