--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -37,7 +37,9 @@
     </nav>
   </div>
 
+  <div class="ui container">
   {% block content %}<!-- default content text (typically empty) -->{% endblock %}
+  </div>
 
   <script src="{% static 'js/custom_js.js' %}"></script>
 </body>
