--- a/source/server/annotation/templates/projects.html
+++ b/source/server/annotation/templates/projects.html
@@ -3,34 +3,56 @@
 
 {% block content %}
 
-<div class="pusher">
-    <div class="ui vertical stripe segment">
-    	<div class="ui middle aligned stackable grid container">
-    	    <div class="ui relaxed divided list">
-                <div class="item">
-                     <i class="large chevron circle right middle aligned icon"></i>
-                    <div class="content">
-                        <a class="header">project1</a>
-                        <div class="description">Lorem ipsum dolor sit amet.</div>
-                    </div>
-                </div>
-                <div class="item">
-                    <i class="large chevron circle right middle aligned icon"></i>
-                    <div class="content">
-                        <a class="header">project2</a>
-                        <div class="description">Lorem ipsum dolor sit amet.</div>
-                    </div>
-                </div>
-                <div class="item">
-                    <i class="large chevron circle right middle aligned icon"></i>
-                    <div class="content">
-                        <a class="header">project3</a>
-                        <div class="description">Lorem ipsum dolor sit amet.</div>
-                    </div>
-                </div>
-            </div>
+<div class="ui container">
+  <div class="ui vertical stripe segment">
+  	<div class="ui stackable grid container">
+      <div class="four wide column">
+        <div class="ui center button">Create new project</div>
+  	    <div class="ui relaxed divided list">
+          <div class="item">
+               <i class="large chevron circle right middle aligned icon"></i>
+              <div class="content">
+                  <a class="header">project1</a>
+                  <div class="description">Lorem ipsum dolor sit amet.</div>
+              </div>
+          </div>
+          <div class="item">
+              <i class="large chevron circle right middle aligned icon"></i>
+              <div class="content">
+                  <a class="header">project2</a>
+                  <div class="description">Lorem ipsum dolor sit amet.</div>
+              </div>
+          </div>
+          <div class="item">
+              <i class="large chevron circle right middle aligned icon"></i>
+              <div class="content">
+                  <a class="header">project3</a>
+                  <div class="description">Lorem ipsum dolor sit amet.</div>
+              </div>
+          </div>
         </div>
+      </div>
+      <div class="twelve wide column">
+        <form class="ui form">
+          <div class="field">
+            <label>Project Name</label>
+            <input type="text" name="project-name" placeholder="Project Name">
+          </div>
+          <div class="field">
+            <label>Project description</label>
+            <textarea rows="2" name="project-description"></textarea>
+          </div>
+          <div class="field">
+            <label>File</label>
+            <input type="file" name="file-input"></input>
+          </div>
+          <div class="ui primary submit button">Create</div>
+          <div class="ui clear button" onclick="$('.ui.form').form('clear')">Clear</div>
+          <div class="ui error message"></div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
