fix some minor errors

--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -28,7 +28,7 @@
 </head>
 <body id="root">
   <div class="ui inverted segment">
-    <div class="ui stackable inverted secondary pointing menu">
+    <div class="ui inverted secondary pointing menu">
       <div class="ui container">
         <a href="/" 
            class="header item">
