--- a/source/server/annotation/templates/projects.html
+++ b/source/server/annotation/templates/projects.html
@@ -5,48 +5,58 @@
 
   <div class="ui vertical stripe segment">
   	<div class="ui stackable grid container">
-      <div class="four wide column">
-        <div class="ui center button">Create new project</div>
+      <div class="five wide column">
   	    <div class="ui relaxed divided list">
           <div class="item">
                <i class="large chevron circle right middle aligned icon"></i>
               <div class="content">
-                  <a class="header">project1</a>
-                  <div class="description">Lorem ipsum dolor sit amet.</div>
+                  <a class="header">Проект_1</a>
+                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
               </div>
           </div>
           <div class="item">
               <i class="large chevron circle right middle aligned icon"></i>
               <div class="content">
-                  <a class="header">project2</a>
-                  <div class="description">Lorem ipsum dolor sit amet.</div>
+                  <a class="header">Проект_2</a>
+                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
               </div>
           </div>
           <div class="item">
               <i class="large chevron circle right middle aligned icon"></i>
               <div class="content">
-                  <a class="header">project3</a>
-                  <div class="description">Lorem ipsum dolor sit amet.</div>
+                  <a class="header">Проект_2</a>
+                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
               </div>
           </div>
         </div>
       </div>
-      <div class="twelve wide column">
+      <div class="eleven wide column">
+        <h2 class="ui header">
+          <i class="file alternate icon"></i>
+          <div class="content">Создание проекта</div>
+        </h2>
         <form class="ui form">
           <div class="field">
-            <label>Project Name</label>
+            <label>Название проекта</label>
             <input type="text" name="project-name" placeholder="Project Name">
           </div>
           <div class="field">
-            <label>Project description</label>
+            <label>Описание проекта</label>
             <textarea rows="2" name="project-description"></textarea>
           </div>
           <div class="field">
-            <label>File</label>
-            <input type="file" name="file-input"></input>
+            <label>Тип проекта</label>
+            <div class="ui dropdown selection">
+              <input type="hidden" name="project-type">
+              <div class="default text">Выберите тип проекта</div>
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <div class="item" data-value="text_label">Text labeling</div>
+              </div>
+            </div>
           </div>
-          <div class="ui primary submit button">Create</div>
-          <div class="ui clear button" onclick="$('.ui.form').form('clear')">Clear</div>
+          <div class="ui primary submit button">Создать</div>
+          <div class="ui clear button" onclick="$('.ui.form').form('clear')">Очистить форму</div>
           <div class="ui error message"></div>
         </form>
       </div>
