generate project list from json

--- a/source/server/annotation/templates/projects.html
+++ b/source/server/annotation/templates/projects.html
@@ -6,28 +6,9 @@
   <div class="ui vertical stripe segment">
   	<div class="ui stackable grid container">
       <div class="five wide column">
-  	    <div class="ui relaxed divided list">
-          <div class="item">
-               <i class="large chevron circle right middle aligned icon"></i>
-              <div class="content">
-                  <a class="header">Проект_1</a>
-                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
-              </div>
-          </div>
-          <div class="item">
-              <i class="large chevron circle right middle aligned icon"></i>
-              <div class="content">
-                  <a class="header">Проект_2</a>
-                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
-              </div>
-          </div>
-          <div class="item">
-              <i class="large chevron circle right middle aligned icon"></i>
-              <div class="content">
-                  <a class="header">Проект_2</a>
-                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
-              </div>
-          </div>
+  	    <div class="ui relaxed divided project list">
+          <div class='ui header'>Список проектов</div>
+
         </div>
       </div>
       <div class="eleven wide column">
