--- a/source/server/annotation/templates/projects.html
+++ b/source/server/annotation/templates/projects.html
@@ -1,53 +1,55 @@
 {% extends "base.html" %}
 
-
 {% block content %}
-
   <div class="ui vertical stripe segment">
-  	<div class="ui stackable grid container">
+    <div class="ui stackable grid container">
+
       <div class="five wide column">
-  	    <div class="ui relaxed divided list">
+        <div class="ui relaxed divided list">
           <div class="item">
-               <i class="large chevron circle right middle aligned icon"></i>
-              <div class="content">
-                  <a class="header">Проект_1</a>
-                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
-              </div>
+            <i class="large chevron circle right middle aligned icon"></i>
+            <div class="content">
+              <a class="header">Проект_1</a>
+              <div class="description">Далеко-далеко за словесными горами в стране.</div>
+            </div>
           </div>
           <div class="item">
-              <i class="large chevron circle right middle aligned icon"></i>
-              <div class="content">
-                  <a class="header">Проект_2</a>
-                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
-              </div>
+            <i class="large chevron circle right middle aligned icon"></i>
+            <div class="content">
+              <a class="header">Проект_2</a>
+              <div class="description">Далеко-далеко за словесными горами в стране.</div>
+            </div>
           </div>
           <div class="item">
-              <i class="large chevron circle right middle aligned icon"></i>
-              <div class="content">
-                  <a class="header">Проект_2</a>
-                  <div class="description">Далеко-далеко за словесными горами в стране.</div>
-              </div>
+            <i class="large chevron circle right middle aligned icon"></i>
+            <div class="content">
+              <a class="header">Проект_2</a>
+              <div class="description">Далеко-далеко за словесными горами в стране.</div>
+            </div>
           </div>
         </div>
       </div>
+
       <div class="eleven wide column">
         <h2 class="ui header">
           <i class="file alternate icon"></i>
           <div class="content">Создание проекта</div>
         </h2>
-        <form class="ui form">
+        <form class="ui form" id="app-form" v-on:submit.prevent="onSubmit">
           <div class="field">
             <label>Название проекта</label>
-            <input type="text" name="name">
+            <input type="text" name="name" v-model="name">
           </div>
+
           <div class="field">
             <label>Описание проекта</label>
-            <textarea rows="2" name="description"></textarea>
+            <textarea rows="2" name="description" v-model="description"></textarea>
           </div>
+
           <div class="field">
             <label>Тип проекта</label>
             <div class="ui dropdown selection">
-              <input type="hidden" name="type">
+              <input type="hidden" name="type" v-model="type">
               <div class="default text">Выберите тип проекта</div>
               <i class="dropdown icon"></i>
               <div class="menu">
@@ -55,8 +57,10 @@
               </div>
             </div>
           </div>
-          <div class="ui primary submit button">Создать</div>
-          <div class="ui clear button" onclick="$('.ui.form').form('clear')">Очистить форму</div>
+
+          <button class="ui primary submit button" v-on:submit.prevent="submit();">Создать</button>
+
+          <!-- <div class="ui clear button" onclick="$('.ui.form').form('clear')">Очистить форму</div> -->
           <div class="ui error message"></div>
           <div class="ui success message">
             <div class="header">
@@ -65,7 +69,7 @@
           </div>
         </form>
       </div>
+
     </div>
   </div>
-
 {% endblock %}
