--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -13,13 +13,22 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'st/semantic.min.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
+  
   <script src="{% static 'st/semantic.min.js' %}"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+<!--   <script src="https://unpkg.com/semantic-ui-vue/dist/umd/semantic-ui-vue.min.js"></script>
+  <script type="text/javascript">
+    Vue.use(SemanticUIVue);
+  </script> -->
+
   <!-- {% if debug %}
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
   {% else %}
