--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -9,26 +9,26 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=no"
   />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'st/semantic.min.css' %}">
+  <link
+    type="text/css"
+    rel="stylesheet"
+    href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css"
+  />
+  <link
+    type="text/css"
+    rel="stylesheet"
+    href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"
+  />
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script> -->
+  <script src="https://unpkg.com/vue@latest/dist/vue.js"></script>
+  <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-  <script
-    src="https://code.jquery.com/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
   
-  <script src="{% static 'st/semantic.min.js' %}"></script>
-
-<!--   <script src="https://unpkg.com/semantic-ui-vue/dist/umd/semantic-ui-vue.min.js"></script>
-  <script type="text/javascript">
-    Vue.use(SemanticUIVue);
-  </script> -->
-
   <!-- {% if debug %}
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
   {% else %}
@@ -36,25 +36,51 @@
   {% endif %} -->
 </head>
 <body id="root">
-  <div class="ui inverted segment">
-    <div class="ui inverted secondary pointing menu">
-      <div class="ui container">
-        <a href="/" 
-           class="header item">
-           Shanno
-        </a>
-        <a  href="/projects/" 
-            class="item {% if request.resolver_match.url_name == 'projects' %}active{% endif %}">
-          Projects
-        </a>
-      </div>
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="/">Shanno</a>
+   <!--  <button 
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarsExampleDefault"
+      aria-controls="navbarsExampleDefault"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+    <div class="collapse navbar-collapse" id="navbarsDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item {% if request.resolver_match.url_name == 'index' %}active{% endif %}">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item {% if request.resolver_match.url_name == 'projects' %}active{% endif %}">
+          <a class="nav-link" href="/projects/">Projects <span class="sr-only">(current)</span></a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li> -->
+      </ul>
+     <!--  <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form> -->
     </div>
+  </nav>
+
+  <div class="container">
+    {% block content %}<!-- default content text (typically empty) -->{% endblock %}    
   </div>
 
-  <div class="ui container">
-    {% block content %}<!-- default content text (typically empty) -->{% endblock %}
-  </div>
-
-  <script src="{% static 'js/custom_js.js' %}"></script>
+  {% block js-script %}
+  {% endblock %}
 </body>
 </html>
