add project sidebar

--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -2,6 +2,27 @@
 
 {% block content %}
 
-<h1>Project Page of Number</h1>
+<div class="sidebar-container">
+  <div class="sidebar-project-name">
+    Test Project 1
+  </div>
+  <ul class="sidebar-nav">
+    <li>
+      <a href="#">DataSet</a>
+    </li>
+    <li>
+      <a href="#">Импорт</a>
+    </li>
+    <li>
+      <a href="#">Экспорт</a>
+    </li>
+    <li>
+      <a href="#">Label</a>
+    </li>
+    <li>
+      <a href="#">Настройки</a>
+    </li>
+  </ul>
+</div>
 
 {% endblock %}
