--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -37,7 +37,7 @@
 </head>
 <body id="root">
 
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Shanno</a>
    <!--  <button 
       class="navbar-toggler"
