--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -11,14 +11,16 @@
       <a href="#">DataSet</a>
     </li>
     <li>
-      <a href="#">Импорт</a>
+      <a class="active" href="#">Импорт</a>
     </li>
     <li>
       <a href="#">Экспорт</a>
     </li>
+    <hr>
     <li>
       <a href="#">Label</a>
     </li>
+    <hr>
     <li>
       <a href="#">Настройки</a>
     </li>
