--- a/source/server/static/css/style.css
+++ b/source/server/static/css/style.css
@@ -7,6 +7,18 @@ body {
   Project_page
 */
 
+hr {
+	width: 80%;
+	height: 2px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #666666;
+	border: 0 none;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+
 .sidebar-container {
   position: fixed;
   width: 230px;
@@ -21,7 +33,8 @@ body {
 .sidebar-project-name {
   padding: 10px 15px 10px 30px;
   font-size: 16px;
-  background-color: #151515;
+  font-weight: bold;
+  background-color: #343a40;
 }
 
 .sidebar-nav {
@@ -43,28 +56,13 @@ body {
   padding: 10px 15px 10px 30px;
   display: block;
   color: #fff;
+  text-decoration: none;
 }
 
-.sidebar-nav li a:active,
+.sidebar-nav li a.active,
 .sidebar-nav li a:hover,
 .sidebar-nav li a:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-.sidebar-nav li::before {
-  background-color: #151515;
-  position: absolute;
-  content: '';
-  height: 100%;
-  left: 0;
-  top: 0;
-  -webkit-transition: width 0.2s ease-in;
-  transition: width 0.2s ease-in;
-  width: 3px;
-  z-index: -1;
-}
-
-.sidebar-nav li:hover::before {
-  width: 100%;
+  border-left: 4px solid #3dd19b;
+  background-color: #4f5b69;
+  
 }
