--- a/source/server/templates/base.html
+++ b/source/server/templates/base.html
@@ -76,7 +76,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container-fluid base-content">
     {% block content %}<!-- default content text (typically empty) -->{% endblock %}    
   </div>
 
