Добавлена возможность удалить проект

--- a/source/server/annotation/templates/project_settings.html
+++ b/source/server/annotation/templates/project_settings.html
@@ -2,6 +2,13 @@
 
 {% block project-content %}
 
-<h1>Что то про настройки </h1>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Удаление проекта</h5>
+    <p>Удалить проет <strong>{{ project.name }}</strong>?</p>
+    <button type="button" class="btn btn-danger">Удалить</button>
+  </div>
+</div>
+
 
 {% endblock %}
