Add hidden input to settings

--- a/source/server/annotation/templates/project_settings.html
+++ b/source/server/annotation/templates/project_settings.html
@@ -6,6 +6,7 @@
   <div class="card-body">
     <h5 class="card-title">Удаление проекта</h5>
     <p>Удалить проет <strong>{{ project.name }}</strong>?</p>
+    <input type="hidden" id="project-id" value="{{project.id}}" />
     <button type="button" class="btn btn-danger">Удалить</button>
   </div>
 </div>
