--- a/source/server/annotation/templates/project_import.html
+++ b/source/server/annotation/templates/project_import.html
@@ -18,7 +18,11 @@
       <div class="tab-panels">
         <section id="conllu" class="tab-panel">
           <h2>CoNLL-U Plus</h2>
-          <p>Является расширением формата CoNLL-U. Может иметь любое количество столбцов. <a href="https://universaldependencies.org/ext-format.html">Формат.</a></p>
+          <p>
+            Является расширением формата CoNLL-U. Может иметь любое количество столбцов.
+            <a href="https://universaldependencies.org/ext-format.html">Формат.</a>
+            Должен быть в кодировке UTF-8.
+          </p>
           <p>Пример:</p>
           <pre class=table-dark>
 # global.columns = FORM NE
@@ -32,7 +36,12 @@ example	_
       
         <section id="some" class="tab-panel">
           <h2>Другой формат</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos architecto eum temporibus voluptate molestiae iusto ipsam, quisquam rem hic mollitia earum.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Harum nihil deleniti labore eos ratione, omnis nam fuga dignissimos
+            architecto eum temporibus voluptate molestiae iusto ipsam,
+            quisquam rem hic mollitia earum.
+          </p>
         </section>
 
       </div>
