create info page

--- a/source/server/annotation/templates/project_page.html
+++ b/source/server/annotation/templates/project_page.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
 
 <div class="projects-base">
@@ -31,10 +33,48 @@
   <div id="project-content">
     {% block project-content %}
 
-      Блок под свойства объектов
-
-    {% endblock %}
+    <div class="container-fluid" id="project-page">
+        <p class="lead">
+          <b-badge pill variant="info">{{ project.type }}</b-badge> {{ project.description }} 
+        </p>
+        <p class="h5">Количество обработанных документов</p>
+        <b-progress class="w-50" :max="rows" height="2rem">
+          <b-progress-bar :value="processed_docs">
+            Обработано: <strong>${ processed_docs } / ${ total_docs }</strong>
+          </b-progress-bar>
+        </b-progress>
+      <div class="overflow-auto">
+        <p class="h5">Список документов</p>
+        <b-list-group class="doc-list">
+          <b-list-group-item
+          href="#" 
+          class="flex-column align-items-start"
+          id="docs-table"
+          :item="doc"
+          :key="doc.id"
+          v-for="doc in docs">
+            <div class="d-flex justify-content-between">
+              <h5 class="mb-1">${doc.name}</h5>
+            </div>
+            <p class="mb-1">
+              ${doc.description | truncate(50)}
+            </p>
+          </b-list-group-item>
+        </b-list-group>
+        <b-pagination
+        v-model="current_page"
+        :total-rows="rows"
+        :per-page="per_page"
+        aria-controls="docs-table">
+        </b-pagination>
+      </div>
+    </div>
   </div>
+    {% endblock %}
 </div>
 
+{% endblock %}
+
+{% block js-script %}
+  <script src="{% static 'js/project_page.js' %}"></script>
 {% endblock %}
